# wlan-cloud-owls

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-entrypoint.sh  docker_build.sh  docker_run.sh  owls.properties  owls.properties.tmpl  owls.service  owprov.service  set_env.sh  ucentral-clnt.properties  ucentralsim.properties  wait-for-postgres.sh
.github/workflows/: ci.yml  cleanup.yml  openapi-pages.yml
cmake-build/: Makefile
docs/: index.html
helm/: Chart.yaml  README.md  values.yaml
helm/templates/: _config.tpl  _helpers.tpl  deployment.yaml  ingress.yaml  pvc.yaml  secret-certs-cas.yaml  secret-certs.yaml  secret-config.yaml  secret-env.yaml  secret-regcred.yaml  service.yaml
openapi/: owls.yaml
sample_data/: eap101-bridge-stats.json  eap101-bridge-wifi-clients-config.json  eap101-bridge-wifi-clients.json  state-2-9.json
src/: APIServers.cpp  CensusReport.h  Daemon.cpp  Daemon.h  Dashboard.cpp  Dashboard.h  KafkaManager.cpp  MicroService.cpp  MicroService.h  MockElements.h  OWLS_Connect.cpp  OWLS_CrashLog.cpp  OWLS_Disconnect.cpp  OWLS_EstablishConnection.cpp  OWLS_HealthCheck.cpp  OWLS_KeepAlive.cpp  OWLS_Log.cpp  OWLS_PendingConfig.cpp  OWLS_Reconnect.cpp  OWLS_State.cpp  OWLS_Update.cpp  OWLS_WSPing.cpp  OWLS_utils.h  OWLSclient.cpp  OWLSclient.h  OWLSclientEvents.h  OWLSdefinitions.h  OWLSevent.cpp  OWLSevent.h  OWLSscheduler.cpp  OWLSscheduler.h  RESTAPI_InternalServer.cpp  RESTAPI_OWLSobjects.cpp  RESTAPI_deviceDashboardHandler.h  RESTAPI_server.cpp  SimStats.cpp  SimStats.h  Simulation.cpp  Simulation.h  SimulationCoordinator.cpp  (+23 more)
src/RESTAPI/: RESTAPI_Routers.cpp  RESTAPI_deviceDashboardHandler.cpp  RESTAPI_deviceDashboardHandler.h  RESTAPI_operation_handler.cpp  RESTAPI_operation_handler.h  RESTAPI_results_handler.cpp  RESTAPI_results_handler.h  RESTAPI_routers.cpp  RESTAPI_simulation_handler.cpp  RESTAPI_simulation_handler.h  RESTAPI_status_handler.cpp  RESTAPI_status_handler.h
src/RESTObjects/: RESTAPI_GWobjects.cpp  RESTAPI_GWobjects.h  RESTAPI_OWLSobjects.cpp  RESTAPI_OWLSobjects.h  RESTAPI_ProvObjects.cpp  RESTAPI_ProvObjects.h
src/framework/: ALBserver.h  API_Proxy.h  KafkaManager.cpp  MicroService.h  StorageClass.h  orm.h
src/libs/: Scheduler.h
src/storage/: storage_results.cpp  storage_results.h  storage_simulations.cpp  storage_simulations.h
test_scripts/curl/: cli
